[package]
name = "geo_prep"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
itertools = "0.10.5"
leptess = "0.14.0"
proj = "0.22.0"
rayon = "1.6.1"
regex = "1.7.1"
rusty-tesseract = "1.0.0"
tracing-unwrap = "0.10.0"
xml-rs = "0.8.11"
axum = { version = "0.6.10", features = ["multipart", "headers", "http2"] }
axum-sessions = "0.4.1"
axum_database_sessions = { version = "7.0.0", features = ["sqlx"] }
axum_sessions_auth = { version = "7.0.0", features = ["postgres-rustls"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
envy = "0.4.2"
figment = { version = "0.10.8", features = ["env"] }
geojson = "0.24.0"
geozero = { version = "0.9.7", features = ["postgres-types", "sqlx", "with-postgis-postgres", "with-postgis-sqlx", "with-wkb", "geos", "gpx", "prost", "with-geos", "with-gpkg", "with-gpx"] }
humantime-serde = "1.1.1"
image = "0.24.5"
lettre = { version = "0.10.4", features = ["tokio1_rustls", "serde", "serde_json"] }
password-hash = "0.4.2"
pbkdf2 = "0.11.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking", "rustls-tls", "serde_json", "tokio-rustls", "json", "cookies", "cookie_crate", "cookie_store"] }
rss = "2.0.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "offline"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "std", "ansi", "env-filter", "local-time"] }
uuid = { version = "1.3.0", features = ["serde"] }

